# maestro

./: .README.md.swp  .gitignore  AGENTS.md  README.md  config_example.json  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  skim.py
.github/workflows/: ci.yml
scripts/: install.sh  make_tasks.py  merge_outputs.py
src/maestro/: __init__.py  cli.py  config.py  report.py  skimmer.py
src/maestro/runners/: gnu_parallel.py  htcondor.py
src/nanoaod_skim/: chunking.py  cli.py  config.py  skimmer.py
src/nanoaod_skim/runners/: __init__.py  gnu_parallel.py  local.py
tests/: test_skim.py
workflows/gnu_parallel/: run.sh  tasks.txt
workflows/htcondor/: run_job.sh  submit.sub
